--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "maddox-js-funcs",
-  "version": "1.0.0",
+  "type": "module",
+  "version": "1.0.1",
   "description": "functions I found helpful in my react/redux/express stack",
   "main": "functions.js",
   "scripts": {
