--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maddox-js-funcs",
   "type": "module",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "functions I found helpful in my react/redux/express stack",
   "main": "functions.js",
   "scripts": {
@@ -14,7 +14,8 @@
   "keywords": [
     "react",
     "javascript",
-    "functions"
+    "functions",
+    "sql"
   ],
   "author": "maddox schmidlkofer",
   "license": "ISC",
